--- a/lab-04_2_load_data.ipynb
+++ b/lab-04_2_load_data.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,17 +381,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 73.,  80.,  75., 152.],\n",
+       "       [ 93.,  88.,  93., 185.],\n",
+       "       [ 89.,  91.,  90., 180.],\n",
+       "       [ 96.,  98., 100., 196.],\n",
+       "       [ 73.,  66.,  70., 142.],\n",
+       "       [ 53.,  46.,  55., 101.],\n",
+       "       [ 69.,  74.,  77., 149.],\n",
+       "       [ 47.,  56.,  60., 115.],\n",
+       "       [ 87.,  79.,  90., 175.],\n",
+       "       [ 79.,  70.,  88., 164.],\n",
+       "       [ 69.,  70.,  73., 141.],\n",
+       "       [ 70.,  65.,  74., 141.],\n",
+       "       [ 93.,  95.,  91., 184.],\n",
+       "       [ 79.,  80.,  73., 152.],\n",
+       "       [ 70.,  73.,  78., 148.],\n",
+       "       [ 93.,  89.,  96., 192.],\n",
+       "       [ 78.,  75.,  68., 147.],\n",
+       "       [ 81.,  90.,  93., 183.],\n",
+       "       [ 88.,  92.,  86., 177.],\n",
+       "       [ 78.,  83.,  77., 159.],\n",
+       "       [ 82.,  86.,  90., 177.],\n",
+       "       [ 86.,  82.,  89., 175.],\n",
+       "       [ 78.,  83.,  85., 175.],\n",
+       "       [ 76.,  83.,  71., 149.],\n",
+       "       [ 96.,  93.,  95., 192.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x_data = xy[:, 0:-1]\n",
-    "y_data = xy[:, [-1]]"
+    "xy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 73.  80.  75.]\n",
+      " [ 93.  88.  93.]\n",
+      " [ 89.  91.  90.]\n",
+      " [ 96.  98. 100.]\n",
+      " [ 73.  66.  70.]\n",
+      " [ 53.  46.  55.]\n",
+      " [ 69.  74.  77.]\n",
+      " [ 47.  56.  60.]\n",
+      " [ 87.  79.  90.]\n",
+      " [ 79.  70.  88.]\n",
+      " [ 69.  70.  73.]\n",
+      " [ 70.  65.  74.]\n",
+      " [ 93.  95.  91.]\n",
+      " [ 79.  80.  73.]\n",
+      " [ 70.  73.  78.]\n",
+      " [ 93.  89.  96.]\n",
+      " [ 78.  75.  68.]\n",
+      " [ 81.  90.  93.]\n",
+      " [ 88.  92.  86.]\n",
+      " [ 78.  83.  77.]\n",
+      " [ 82.  86.  90.]\n",
+      " [ 86.  82.  89.]\n",
+      " [ 78.  83.  85.]\n",
+      " [ 76.  83.  71.]\n",
+      " [ 96.  93.  95.]] (25, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_data = xy[:, 0:-1]\n",
+    "print(x_data, x_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[152.]\n",
+      " [185.]\n",
+      " [180.]\n",
+      " [196.]\n",
+      " [142.]\n",
+      " [101.]\n",
+      " [149.]\n",
+      " [115.]\n",
+      " [175.]\n",
+      " [164.]\n",
+      " [141.]\n",
+      " [141.]\n",
+      " [184.]\n",
+      " [152.]\n",
+      " [148.]\n",
+      " [192.]\n",
+      " [147.]\n",
+      " [183.]\n",
+      " [177.]\n",
+      " [159.]\n",
+      " [177.]\n",
+      " [175.]\n",
+      " [175.]\n",
+      " [149.]\n",
+      " [192.]] (25, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_data = xy[:, [-1]]\n",
+    "print(y_data, y_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,16 +578,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f528804e590>"
+       "<torch._C.Generator at 0x7f13c4a15e70>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -496,26 +614,26 @@
      "output_type": "stream",
      "text": [
       "Epoch    0/20 Cost: 26811.960938\n",
-      "Epoch    1/20 Cost: 9920.529297\n",
-      "Epoch    2/20 Cost: 3675.299072\n",
-      "Epoch    3/20 Cost: 1366.261108\n",
-      "Epoch    4/20 Cost: 512.542236\n",
-      "Epoch    5/20 Cost: 196.896484\n",
-      "Epoch    6/20 Cost: 80.190910\n",
-      "Epoch    7/20 Cost: 37.038647\n",
-      "Epoch    8/20 Cost: 21.081354\n",
-      "Epoch    9/20 Cost: 15.178741\n",
-      "Epoch   10/20 Cost: 12.993667\n",
-      "Epoch   11/20 Cost: 12.183028\n",
-      "Epoch   12/20 Cost: 11.880545\n",
-      "Epoch   13/20 Cost: 11.765955\n",
-      "Epoch   14/20 Cost: 11.720857\n",
-      "Epoch   15/20 Cost: 11.701424\n",
-      "Epoch   16/20 Cost: 11.691505\n",
-      "Epoch   17/20 Cost: 11.685121\n",
-      "Epoch   18/20 Cost: 11.680006\n",
-      "Epoch   19/20 Cost: 11.675381\n",
-      "Epoch   20/20 Cost: 11.670943\n"
+      "Epoch    1/20 Cost: 9920.530273\n",
+      "Epoch    2/20 Cost: 3675.298828\n",
+      "Epoch    3/20 Cost: 1366.260620\n",
+      "Epoch    4/20 Cost: 512.542480\n",
+      "Epoch    5/20 Cost: 196.896622\n",
+      "Epoch    6/20 Cost: 80.190994\n",
+      "Epoch    7/20 Cost: 37.038700\n",
+      "Epoch    8/20 Cost: 21.081343\n",
+      "Epoch    9/20 Cost: 15.178759\n",
+      "Epoch   10/20 Cost: 12.993679\n",
+      "Epoch   11/20 Cost: 12.183025\n",
+      "Epoch   12/20 Cost: 11.880536\n",
+      "Epoch   13/20 Cost: 11.765958\n",
+      "Epoch   14/20 Cost: 11.720850\n",
+      "Epoch   15/20 Cost: 11.701437\n",
+      "Epoch   16/20 Cost: 11.691511\n",
+      "Epoch   17/20 Cost: 11.685117\n",
+      "Epoch   18/20 Cost: 11.680004\n",
+      "Epoch   19/20 Cost: 11.675379\n",
+      "Epoch   20/20 Cost: 11.670951\n"
      ]
     }
    ],
@@ -558,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,34 +691,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch    0/20 Cost: 28388.000000\n",
-      "Epoch    1/20 Cost: 10504.286133\n",
-      "Epoch    2/20 Cost: 3892.179688\n",
-      "Epoch    3/20 Cost: 1447.497314\n",
-      "Epoch    4/20 Cost: 543.628357\n",
-      "Epoch    5/20 Cost: 209.440048\n",
-      "Epoch    6/20 Cost: 85.878799\n",
-      "Epoch    7/20 Cost: 40.191814\n",
-      "Epoch    8/20 Cost: 23.297268\n",
-      "Epoch    9/20 Cost: 17.048059\n",
-      "Epoch   10/20 Cost: 14.734761\n",
-      "Epoch   11/20 Cost: 13.876624\n",
-      "Epoch   12/20 Cost: 13.556563\n",
-      "Epoch   13/20 Cost: 13.435411\n",
-      "Epoch   14/20 Cost: 13.387821\n",
-      "Epoch   15/20 Cost: 13.367404\n",
-      "Epoch   16/20 Cost: 13.357059\n",
-      "Epoch   17/20 Cost: 13.350419\n",
-      "Epoch   18/20 Cost: 13.345175\n",
-      "Epoch   19/20 Cost: 13.340427\n",
-      "Epoch   20/20 Cost: 13.335882\n"
+      "Epoch    0/20 Cost: 21811.406250\n",
+      "Epoch    1/20 Cost: 8068.697266\n",
+      "Epoch    2/20 Cost: 2987.637207\n",
+      "Epoch    3/20 Cost: 1109.027954\n",
+      "Epoch    4/20 Cost: 414.453278\n",
+      "Epoch    5/20 Cost: 157.649673\n",
+      "Epoch    6/20 Cost: 62.701820\n",
+      "Epoch    7/20 Cost: 27.596521\n",
+      "Epoch    8/20 Cost: 14.616626\n",
+      "Epoch    9/20 Cost: 9.817179\n",
+      "Epoch   10/20 Cost: 8.042187\n",
+      "Epoch   11/20 Cost: 7.385448\n",
+      "Epoch   12/20 Cost: 7.142184\n",
+      "Epoch   13/20 Cost: 7.051775\n",
+      "Epoch   14/20 Cost: 7.017904\n",
+      "Epoch   15/20 Cost: 7.004915\n",
+      "Epoch   16/20 Cost: 6.999650\n",
+      "Epoch   17/20 Cost: 6.997247\n",
+      "Epoch   18/20 Cost: 6.995912\n",
+      "Epoch   19/20 Cost: 6.994950\n",
+      "Epoch   20/20 Cost: 6.994141\n"
      ]
     }
    ],
@@ -617,10 +735,10 @@
     "for epoch in range(nb_epochs+1):\n",
     "    \n",
     "    # H(x) 계산\n",
-    "    prediction = model(x_train)\n",
+    "#     prediction = model(x_train)\n",
     "    \n",
     "    # cost 계산\n",
-    "    cost = F.mse_loss(prediction, y_train)\n",
+    "    cost = F.mse_loss(model(x_train), y_train)\n",
     "    \n",
     "    # cost로 H(x) 개선\n",
     "    optimizer.zero_grad()\n",
@@ -662,6 +780,13 @@
    "source": [
     "[PyTorch Data Loading and Processing tutorial](https://pytorch.org/tutorials/beginner/data_loading_tutorial.html#iterating-through-the-dataset)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -680,9 +805,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
