--- a/lab-06_1_softmax_classification.ipynb
+++ b/lab-06_1_softmax_classification.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x105eccfb0>"
+       "<torch._C.Generator at 0x7f487c067970>"
       ]
      },
      "execution_count": 2,
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "tensor(1.)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -184,9 +184,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.2645, 0.1639, 0.1855, 0.2585, 0.1277],\n",
-      "        [0.2430, 0.1624, 0.2322, 0.1930, 0.1694],\n",
-      "        [0.2226, 0.1986, 0.2326, 0.1594, 0.1868]], grad_fn=<SoftmaxBackward>)\n"
+      "tensor([[0.2528, 0.1500, 0.2019, 0.1292, 0.2662],\n",
+      "        [0.1518, 0.2729, 0.1887, 0.1441, 0.2425],\n",
+      "        [0.1761, 0.2659, 0.1987, 0.2173, 0.1420]], grad_fn=<SoftmaxBackward>)\n"
      ]
     }
    ],
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0, 2, 1])\n"
+      "tensor([0, 3, 0])\n"
      ]
     }
    ],
@@ -216,18 +216,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "tensor([[1., 0., 0., 0., 0.],\n",
-       "        [0., 0., 1., 0., 0.],\n",
-       "        [0., 1., 0., 0., 0.]])"
+       "        [0., 0., 0., 1., 0.],\n",
+       "        [1., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,14 +239,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.4689, grad_fn=<MeanBackward1>)\n"
+      "tensor(1.6830, grad_fn=<MeanBackward1>)\n"
      ]
     }
    ],
@@ -271,18 +271,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-1.3301, -1.8084, -1.6846, -1.3530, -2.0584],\n",
-       "        [-1.4147, -1.8174, -1.4602, -1.6450, -1.7758],\n",
-       "        [-1.5025, -1.6165, -1.4586, -1.8360, -1.6776]], grad_fn=<LogBackward>)"
+       "tensor([[-1.3751, -1.8974, -1.6002, -2.0465, -1.3235],\n",
+       "        [-1.8852, -1.2987, -1.6677, -1.9371, -1.4167],\n",
+       "        [-1.7369, -1.3245, -1.6159, -1.5263, -1.9522]], grad_fn=<LogBackward>)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,19 +294,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-1.3301, -1.8084, -1.6846, -1.3530, -2.0584],\n",
-       "        [-1.4147, -1.8174, -1.4602, -1.6450, -1.7758],\n",
-       "        [-1.5025, -1.6165, -1.4586, -1.8360, -1.6776]],\n",
+       "tensor([[-1.3751, -1.8974, -1.6002, -2.0465, -1.3235],\n",
+       "        [-1.8852, -1.2987, -1.6677, -1.9371, -1.4167],\n",
+       "        [-1.7369, -1.3245, -1.6159, -1.5263, -1.9522]],\n",
        "       grad_fn=<LogSoftmaxBackward>)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pandas as pd\n",
+    "# df = pd.read_csv('iris.csv')\n",
+    "# df.to_csv('iris_noh.csv', header=False, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "xy = np.loadtxt('iris_noh.csv', delimiter=',', dtype=np.float32)\n",
+    "x_data = xy[:, 0:-1]\n",
+    "y_data = xy[:, [-1]]\n",
+    "x_train = torch.FloatTensor(x_data)\n",
+    "y_train = torch.FloatTensor(y_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,24 +445,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch    0/1000 Cost: 1.098612\n",
-      "Epoch  100/1000 Cost: 0.901535\n",
-      "Epoch  200/1000 Cost: 0.839114\n",
-      "Epoch  300/1000 Cost: 0.807826\n",
-      "Epoch  400/1000 Cost: 0.788472\n",
-      "Epoch  500/1000 Cost: 0.774822\n",
-      "Epoch  600/1000 Cost: 0.764449\n",
-      "Epoch  700/1000 Cost: 0.756191\n",
-      "Epoch  800/1000 Cost: 0.749398\n",
-      "Epoch  900/1000 Cost: 0.743671\n",
-      "Epoch 1000/1000 Cost: 0.738749\n"
+      "torch.Size([150, 4]) torch.Size([150, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train.shape, y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Expected object of scalar type Long but got scalar type Float for argument #3 'index'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-51-5260fb85d67a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0my_one_hot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhypothesis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0my_one_hot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscatter_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0mcost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0my_one_hot\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msoftmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhypothesis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Expected object of scalar type Long but got scalar type Float for argument #3 'index'"
      ]
     }
    ],
@@ -453,6 +489,7 @@
     "\n",
     "    # Cost 계산 (1)\n",
     "    hypothesis = F.softmax(x_train.matmul(W) + b, dim=1) # or .mm or @\n",
+    "    \n",
     "    y_one_hot = torch.zeros_like(hypothesis)\n",
     "    y_one_hot.scatter_(1, y_train.unsqueeze(1), 1)\n",
     "    cost = (y_one_hot * -torch.log(F.softmax(hypothesis, dim=1))).sum(dim=1).mean()\n",
@@ -533,8 +570,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try another new dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = [[1, 2, 1, 1],\n",
+    "           [2, 1, 3, 2],\n",
+    "           [3, 1, 3, 4],\n",
+    "           [4, 1, 5, 5],\n",
+    "           [1, 7, 5, 5],\n",
+    "           [1, 2, 5, 6],\n",
+    "           [1, 6, 6, 6],\n",
+    "           [1, 7, 7, 7]]\n",
+    "y_train = [2, 2, 2, 1, 1, 1, 0, 0]\n",
+    "x_train = torch.FloatTensor(x_train)\n",
+    "y_train = torch.LongTensor(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([8])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,44 +632,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = SoftmaxClassifierModel()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's try another new dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch    0/1000 Cost: 1.849513\n",
-      "Epoch  100/1000 Cost: 0.689894\n",
-      "Epoch  200/1000 Cost: 0.609259\n",
-      "Epoch  300/1000 Cost: 0.551218\n",
-      "Epoch  400/1000 Cost: 0.500141\n",
-      "Epoch  500/1000 Cost: 0.451947\n",
-      "Epoch  600/1000 Cost: 0.405051\n",
-      "Epoch  700/1000 Cost: 0.358733\n",
-      "Epoch  800/1000 Cost: 0.312912\n",
-      "Epoch  900/1000 Cost: 0.269521\n",
-      "Epoch 1000/1000 Cost: 0.241922\n"
+      "Epoch    0/1000 Cost: 1.153754\n",
+      "Epoch  100/1000 Cost: 0.652377\n",
+      "Epoch  200/1000 Cost: 0.571758\n",
+      "Epoch  300/1000 Cost: 0.517765\n",
+      "Epoch  400/1000 Cost: 0.473365\n",
+      "Epoch  500/1000 Cost: 0.433827\n",
+      "Epoch  600/1000 Cost: 0.396967\n",
+      "Epoch  700/1000 Cost: 0.361353\n",
+      "Epoch  800/1000 Cost: 0.325841\n",
+      "Epoch  900/1000 Cost: 0.289646\n",
+      "Epoch 1000/1000 Cost: 0.254791\n"
      ]
     }
    ],
    "source": [
+    "model = SoftmaxClassifierModel()\n",
+    "\n",
     "# optimizer 설정\n",
     "optimizer = optim.SGD(model.parameters(), lr=0.1)\n",
     "\n",
@@ -610,6 +679,73 @@
     "            epoch, nb_epochs, cost.item()\n",
     "        ))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([8])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([8, 3])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24355116486549377"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cost.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -628,9 +764,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
