--- a/lab-02_linear_regression.ipynb
+++ b/lab-02_linear_regression.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,16 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fa29837ef90>"
+       "<torch._C.Generator at 0x7f560c0778b0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -457,42 +457,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch    0/1000 W: 0.093, b: 0.040 Cost: 4.666667\n",
-      "Epoch  100/1000 W: 0.873, b: 0.289 Cost: 0.012043\n",
-      "Epoch  200/1000 W: 0.900, b: 0.227 Cost: 0.007442\n",
-      "Epoch  300/1000 W: 0.921, b: 0.179 Cost: 0.004598\n",
-      "Epoch  400/1000 W: 0.938, b: 0.140 Cost: 0.002842\n",
-      "Epoch  500/1000 W: 0.951, b: 0.110 Cost: 0.001756\n",
-      "Epoch  600/1000 W: 0.962, b: 0.087 Cost: 0.001085\n",
-      "Epoch  700/1000 W: 0.970, b: 0.068 Cost: 0.000670\n",
-      "Epoch  800/1000 W: 0.976, b: 0.054 Cost: 0.000414\n",
-      "Epoch  900/1000 W: 0.981, b: 0.042 Cost: 0.000256\n",
-      "Epoch 1000/1000 W: 0.985, b: 0.033 Cost: 0.000158\n"
+      "torch.Size([3, 5]) torch.Size([3, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_train = torch.FloatTensor([[1, 2, 3, 4, 5], [2, 4, 6, 8, 10], [3, 6, 9, 12, 15]])\n",
+    "y_train = torch.FloatTensor([[1], [2], [3]])\n",
+    "\n",
+    "print(x_train.shape, y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    0/1000 hypothesis: tensor([0., 0., 0.]) Cost: 4.666667\n",
+      "Epoch  100/1000 hypothesis: tensor([0.4051, 0.8071, 1.2091]) Cost: 1.661448\n",
+      "Epoch  200/1000 hypothesis: tensor([0.6468, 1.2887, 1.9305]) Cost: 0.591520\n",
+      "Epoch  300/1000 hypothesis: tensor([0.7911, 1.5760, 2.3610]) Cost: 0.210600\n",
+      "Epoch  400/1000 hypothesis: tensor([0.8771, 1.7475, 2.6178]) Cost: 0.074984\n",
+      "Epoch  500/1000 hypothesis: tensor([0.9285, 1.8498, 2.7711]) Cost: 0.026702\n",
+      "Epoch  600/1000 hypothesis: tensor([0.9591, 1.9108, 2.8625]) Cost: 0.009512\n",
+      "Epoch  700/1000 hypothesis: tensor([0.9774, 1.9472, 2.9171]) Cost: 0.003392\n",
+      "Epoch  800/1000 hypothesis: tensor([0.9883, 1.9690, 2.9496]) Cost: 0.001213\n",
+      "Epoch  900/1000 hypothesis: tensor([0.9948, 1.9819, 2.9690]) Cost: 0.000437\n",
+      "Epoch 1000/1000 hypothesis: tensor([0.9987, 1.9897, 2.9806]) Cost: 0.000161\n"
      ]
     }
    ],
    "source": [
     "# 데이터\n",
-    "x_train = torch.FloatTensor([[1], [2], [3]])\n",
-    "y_train = torch.FloatTensor([[1], [2], [3]])\n",
+    "x_train = torch.FloatTensor([[1, 2, 3, 4, 5], \n",
+    "                             [2, 4, 6, 8, 10], \n",
+    "                             [3, 6, 9, 12, 15]])\n",
+    "y_train = torch.FloatTensor([[1], \n",
+    "                             [2], \n",
+    "                             [3]])\n",
     "# 모델 초기화\n",
-    "W = torch.zeros(1, requires_grad=True)\n",
+    "W = torch.zeros((5,1), requires_grad=True)\n",
     "b = torch.zeros(1, requires_grad=True)\n",
     "# optimizer 설정\n",
-    "optimizer = optim.SGD([W, b], lr=0.01)\n",
+    "# optimizer = optim.SGD([W, b], lr=0.01)\n",
+    "optimizer = optim.SGD([W, b], lr=1e-5)\n",
     "\n",
     "nb_epochs = 1000\n",
     "for epoch in range(nb_epochs + 1):\n",
     "    \n",
     "    # H(x) 계산\n",
-    "    hypothesis = x_train * W + b\n",
+    "    hypothesis = x_train.matmul(W) + b\n",
     "    \n",
     "    # cost 계산\n",
     "    cost = torch.mean((hypothesis - y_train) ** 2)\n",
@@ -503,9 +528,15 @@
     "    optimizer.step()\n",
     "\n",
     "    # 100번마다 로그 출력\n",
+    "#     if epoch % 100 == 0:\n",
+    "#         print('Epoch {:4d}/{} W: {:.3f}, b: {:.3f} Cost: {:.6f}'.format(\n",
+    "#             epoch, nb_epochs, W.item(), b.item(), cost.item()\n",
+    "#         ))\n",
+    "    # 100번마다 로그 출력\n",
     "    if epoch % 100 == 0:\n",
-    "        print('Epoch {:4d}/{} W: {:.3f}, b: {:.3f} Cost: {:.6f}'.format(\n",
-    "            epoch, nb_epochs, W.item(), b.item(), cost.item()\n",
+    "        print('Epoch {:4d}/{} hypothesis: {} Cost: {:.6f}'.format(\n",
+    "            epoch, nb_epochs, hypothesis.squeeze().detach(), \n",
+    "            cost.item()\n",
     "        ))"
    ]
   },
@@ -804,9 +835,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
