--- a/lab-07_1_tips.ipynb
+++ b/lab-07_1_tips.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f0708f8ffb0>"
+       "<torch._C.Generator at 0x7f6164088a50>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,12 +74,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_test = torch.FloatTensor([[2, 1, 1], [3, 1, 2], [3, 3, 4]])\n",
     "y_test = torch.LongTensor([2, 2, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 3]) torch.Size([3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_test.shape, y_test.shape)"
    ]
   },
   {
@@ -91,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -274,23 +291,23 @@
      "output_type": "stream",
      "text": [
       "Epoch    0/20 Cost: 1.280268\n",
-      "Epoch    1/20 Cost: 976950.812500\n",
+      "Epoch    1/20 Cost: 976950.750000\n",
       "Epoch    2/20 Cost: 1279135.125000\n",
-      "Epoch    3/20 Cost: 1198379.000000\n",
-      "Epoch    4/20 Cost: 1098825.875000\n",
+      "Epoch    3/20 Cost: 1198379.125000\n",
+      "Epoch    4/20 Cost: 1098825.750000\n",
       "Epoch    5/20 Cost: 1968197.625000\n",
-      "Epoch    6/20 Cost: 284763.250000\n",
-      "Epoch    7/20 Cost: 1532260.125000\n",
-      "Epoch    8/20 Cost: 1651504.000000\n",
-      "Epoch    9/20 Cost: 521878.500000\n",
+      "Epoch    6/20 Cost: 284763.218750\n",
+      "Epoch    7/20 Cost: 1532260.000000\n",
+      "Epoch    8/20 Cost: 1651504.125000\n",
+      "Epoch    9/20 Cost: 521878.437500\n",
       "Epoch   10/20 Cost: 1397263.250000\n",
       "Epoch   11/20 Cost: 750986.250000\n",
-      "Epoch   12/20 Cost: 918691.500000\n",
+      "Epoch   12/20 Cost: 918691.562500\n",
       "Epoch   13/20 Cost: 1487888.250000\n",
       "Epoch   14/20 Cost: 1582260.125000\n",
       "Epoch   15/20 Cost: 685818.062500\n",
       "Epoch   16/20 Cost: 1140048.750000\n",
-      "Epoch   17/20 Cost: 940566.500000\n",
+      "Epoch   17/20 Cost: 940566.562500\n",
       "Epoch   18/20 Cost: 931638.250000\n",
       "Epoch   19/20 Cost: 1971322.625000\n"
      ]
@@ -309,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +430,7 @@
       "Epoch   15/20 Cost: 0.994917\n",
       "Epoch   16/20 Cost: 0.986189\n",
       "Epoch   17/20 Cost: 0.977775\n",
-      "Epoch   18/20 Cost: 0.969660\n",
+      "Epoch   18/20 Cost: 0.969661\n",
       "Epoch   19/20 Cost: 0.961836\n"
      ]
     }
@@ -438,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +464,8 @@
     "                             [89, 91, 90],\n",
     "                             [96, 98, 100],\n",
     "                             [73, 66, 70]])\n",
-    "y_train = torch.FloatTensor([[152], [185], [180], [196], [142]])"
+    "#y_train = torch.FloatTensor([[152], [185], [180], [196], [142]])\n",
+    "y_train = torch.LongTensor([152, 185, 180, 196, 142])"
    ]
   },
   {
@@ -466,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,38 +598,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch    0/20 Cost: 29785.091797\n",
-      "Epoch    1/20 Cost: 18906.164062\n",
-      "Epoch    2/20 Cost: 12054.674805\n",
-      "Epoch    3/20 Cost: 7702.029297\n",
-      "Epoch    4/20 Cost: 4925.733398\n",
-      "Epoch    5/20 Cost: 3151.632568\n",
-      "Epoch    6/20 Cost: 2016.996094\n",
-      "Epoch    7/20 Cost: 1291.051270\n",
-      "Epoch    8/20 Cost: 826.505310\n",
-      "Epoch    9/20 Cost: 529.207336\n",
-      "Epoch   10/20 Cost: 338.934204\n",
-      "Epoch   11/20 Cost: 217.153549\n",
-      "Epoch   12/20 Cost: 139.206741\n",
-      "Epoch   13/20 Cost: 89.313782\n",
-      "Epoch   14/20 Cost: 57.375462\n",
-      "Epoch   15/20 Cost: 36.928429\n",
-      "Epoch   16/20 Cost: 23.835772\n",
-      "Epoch   17/20 Cost: 15.450428\n",
-      "Epoch   18/20 Cost: 10.077808\n",
-      "Epoch   19/20 Cost: 6.633700\n"
+     "ename": "RuntimeError",
+     "evalue": "Expected object of scalar type Float but got scalar type Long for argument #2 'target'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-63-3057133ca572>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnorm_x_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-62-62fcdff47f67>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, optimizer, x_train, y_train)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;31m# cost 계산\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mcost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmse_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprediction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;31m# cost로 H(x) 개선\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/torch/nn/functional.py\u001b[0m in \u001b[0;36mmse_loss\u001b[0;34m(input, target, size_average, reduce, reduction)\u001b[0m\n\u001b[1;32m   2154\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2155\u001b[0m         \u001b[0mexpanded_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpanded_target\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbroadcast_tensors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2156\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmse_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpanded_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpanded_target\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2157\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mret\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Expected object of scalar type Float but got scalar type Long for argument #2 'target'"
      ]
     }
    ],
    "source": [
     "train(model, optimizer, norm_x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 1])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
    ]
   },
   {
@@ -750,9 +775,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
